# psycholing-metrics

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
psycholing_metrics/: __init__.py  eye_tracking.py  metrics.py  model_loader.py  tabular.py  text_processing.py
psycholing_metrics/notebooks/: regime-context-cs-analysis.ipynb
psycholing_metrics/pimentel_word_prob/: setup.py
psycholing_metrics/pimentel_word_prob/wordsprobability/: main.py
psycholing_metrics/pimentel_word_prob/wordsprobability/models/: __init__.py
psycholing_metrics/surprisal/: __init__.py  base.py  concatenated.py  factory.py  inverse_effect.py  pimentel.py  soft_concatenated.py  types.py
psycholing_metrics/tests/: test_surprisal_extraction.py
psycholing_metrics/tests/surp_extraction_tools/: test_remove_redundant_left_context.py
text_metrics/: __init__.py  eye_tracking.py  ling_metrics_funcs.py  lm_zoo_check.py  merge_metrics_with_eye_movements.py  merge_metrics_with_tabular_text.py  metrics.py  model_loader.py  tabular.py  text_processing.py  utils.py
text_metrics/notebooks/: regime-context-cs-analysis.ipynb
text_metrics/pimentel_word_prob/wordsprobability/: main.py
text_metrics/pimentel_word_prob/wordsprobability/models/: bow_lm.py
text_metrics/pimentel_word_prob/wordsprobability/utils/: constants.py  utils.py
text_metrics/surprisal/: __init__.py  base.py  concatenated.py  factory.py  inverse_effect.py  pimentel.py  soft_concatenated.py
text_metrics/surprisal_extractors/: base_extractor.py  extractor_switch.py  extractors_constants.py  inv_effect_extractor.py  pimentel_extractor.py  soft_cat_extractors.py  text_cat_extractor.py
text_metrics/tests/: test_surprisal_extraction.py
text_metrics/tests/surp_extraction_tools/: test_remove_redundant_left_context.py
